# pyCC

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  README.md  TVClust_notebook.ipynb  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/release/: configuration.json
.github/workflows/: coverages.yml  deploy_doc.yml  release.yml  testing.yml
clustlib/: __init__.py  _typing.py  dummy.py  metrics.py  model.py
clustlib/_base/: __init__.py  elkan.py
clustlib/base/: __init__.py  elkan.py  kmean.py  lloyd.py
clustlib/constraints/: __init__.py  graph.py  matrix.py
clustlib/fuzzy/: __init__.py  lcvqe.py
clustlib/gac/: _base.py  base.py  brkga.py  shade.py
clustlib/kmean/: __init__.py  brkga.py  cekm.py  copkmean.py  copkmeans.py  elkan.pyx  kmeans.py  lcvqe.py  rdpmean.py  shade.py  tvclust.py
clustlib/nonparam/: tvclust.py
clustlib/sin/: dils.py
clustlib/utils/: __init__.py  distance.py  graph.py  initilize.py  matrix.py  simpleconstraints.py
docs/: arch.md  index.md
docs/api/: base.md
docs/api/gac/: brkga.md  index.md  shade.md
docs/api/kmean/: copkmeans.md  index.md  rdpmean.md
docs/api/nonparam/: index.md  tvclust.md
docs/api/sin/: dils.md  index.md
examples/: ckmeans.ipynb  dils.ipynb  lcvqe.ipynb  rdpmean.ipynb
notebook/: ckmeans.ipynb  dils.ipynb  lcvqe.ipynb  rdpmean.ipynb  tvclust.ipynb
tests/: test_dummy.py
tests/fuzzy/: test_lcvqe.py
tests/gac/: test_brkga.py  test_shade.py
tests/kmean/: test_copkmean.py  test_kmeans.py  test_rdpmean.py
tests/matrix/: test_matrix.py  test_metrics.py
tests/sin/: test_dils.py
