[tool.poetry]
name = "clustlib"
version = "0.1.0"
description = ""
authors = ["Ismael Marin <ismitae.imm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
pylint = "^2.17.5"
coverage = "^7.3.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.1"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.7.1"
scikit-learn = "^1.3.1"
cython = "^3.0.2"
setuptools = "^69.0.2"
numpy = "^1.26.2"
maturin = "^1.4.0"
pandas = "^2.2.0"
seaborn = "^0.13.2"
pygad = "^3.3.1"
matlab = "^0.1"
matlib = "^0.1.2"
networkx = "^3.4.2"
jupyter = "^1.1.1"
notebook = "^7.4.1"
plotly = "^6.1.2"
griffe = "^1.7.3"
lazydocs = "^0.4.8"
mkdocs-mermaid2-plugin = "^1.2.1"
mock = "^5.2.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.7"
ipykernel = "^6.29.0"
black = "^24.10.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
